change name of project and add some exercises

--- a/Kurs_Youtube/Kurs_Youtube.csproj
+++ b/Kurs_Youtube/Kurs_Youtube.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Zadania\CodeWars\" />
+    <Folder Include="Zadania\PlikiTekstowe\" />
+  </ItemGroup>
+
 </Project>
