--- a/Kurs_Youtube/Kurs_Youtube.csproj
+++ b/Kurs_Youtube/Kurs_Youtube.csproj
@@ -10,7 +10,10 @@
 
   <ItemGroup>
     <Folder Include="Zadania\CodeWars\" />
-    <Folder Include="Zadania\PlikiTekstowe\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
