--- a/Kurs_Youtube/Kurs_Youtube.csproj
+++ b/Kurs_Youtube/Kurs_Youtube.csproj
@@ -10,9 +10,11 @@
 
   <ItemGroup>
     <Folder Include="Zadania\CodeWars\" />
+    <Folder Include="Zadania\KlientHTTP\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
