--- a/Kurs_Youtube/Kurs_Youtube.csproj
+++ b/Kurs_Youtube/Kurs_Youtube.csproj
@@ -10,11 +10,14 @@
 
   <ItemGroup>
     <Folder Include="Zadania\CodeWars\" />
-    <Folder Include="Zadania\KlientHTTP\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Flurl" Version="3.0.6" />
+    <PackageReference Include="Flurl.Http" Version="3.2.4" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
+    <PackageReference Include="HtmlAgilityPack.CssSelectors" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
